--- a/src/notes/JAVASCRIPT学习简记/基础篇/函数与箭头函数.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/函数与箭头函数.md
@@ -2,7 +2,7 @@
 title: 函数与箭头函数
 createTime: 2022/04/20 01:25:34
 author: 李嘉明
-permalink: /defensive-javascript/jdk3bh3a/
+permalink: /learn-js/jdk3bh3a/
 ---
 
 ::: tip 提问
