--- a/src/notes/JAVASCRIPT学习简记/基础篇/原型和原型链.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/原型和原型链.md
@@ -2,7 +2,7 @@
 title: 原型和原型链
 createTime: 2022/04/15 12:48:22
 author: 李嘉明
-permalink: /defensive-javascript/dmtwgwoc/
+permalink: /learn-js/dmtwgwoc/
 ---
 
 ::: tip 提问
