--- a/src/notes/JAVASCRIPT学习简记/基础篇/变量.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/变量.md
@@ -2,7 +2,7 @@
 title: 变量
 createTime: 2022/04/16 11:10:42
 author: 李嘉明
-permalink: /defensive-javascript/kqeizag0/
+permalink: /learn-js/kqeizag0/
 ---
 
 ::: tip 提问
