--- a/src/notes/JAVASCRIPT学习简记/基础篇/异步请求.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/异步请求.md
@@ -2,7 +2,7 @@
 title: 异步请求
 createTime: 2022/04/17 11:37:31
 author: 李嘉明
-permalink: /defensive-javascript/kby2ggwi/
+permalink: /learn-js/kby2ggwi/
 ---
 
 ::: tip 提问
