--- a/src/notes/JAVASCRIPT学习简记/基础篇/数据类型.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/数据类型.md
@@ -2,7 +2,7 @@
 title: 数据类型
 createTime: 2022/04/14 09:43:14
 author: 李嘉明
-permalink: /defensive-javascript/lzbk7vkc/
+permalink: /learn-js/lzbk7vkc/
 ---
 
 ::: tip 提问
