--- a/src/notes/JAVASCRIPT学习简记/基础篇/数据类型转换.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/数据类型转换.md
@@ -2,7 +2,7 @@
 title: 数据类型转换
 createTime: 2022/04/15 11:55:23
 author: 李嘉明
-permalink: /defensive-javascript/9m3js49s/
+permalink: /learn-js/9m3js49s/
 ---
 
 ::: tip 提问
