--- a/src/notes/JAVASCRIPT学习简记/基础篇/栈和堆.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/栈和堆.md
@@ -2,7 +2,7 @@
 title: 栈和堆
 createTime: 2022/04/14 09:49:31
 author: 李嘉明
-permalink: /defensive-javascript/nj8az302/
+permalink: /learn-js/nj8az302/
 ---
 
 ::: tip 提问
