--- a/src/notes/JAVASCRIPT学习简记/基础篇/闭包.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/闭包.md
@@ -2,7 +2,7 @@
 title: 闭包
 createTime: 2022/04/15 04:50:08
 author: 李嘉明
-permalink: /defensive-javascript/ec9ivkvv/
+permalink: /learn-js/ec9ivkvv/
 ---
 
 ::: tip 提问
