--- a/src/notes/JAVASCRIPT学习简记/进阶篇/函数参数按值传递.md
+++ b/src/notes/JAVASCRIPT学习简记/进阶篇/函数参数按值传递.md
@@ -2,7 +2,7 @@
 title: JavaScript进阶（五）— 函数参数按值传递
 createTime: 2020/02/12 11:27:54
 author: 李嘉明
-permalink: /defensive-javascript/m4a92nl5/
+permalink: /learn-js/m4a92nl5/
 ---
 
 我们知道，在 `ECMAScrip` 中， 函数的参数是 **按值传递** 的。
