--- a/src/notes/JAVASCRIPT学习简记/进阶篇/原型到原型链.md
+++ b/src/notes/JAVASCRIPT学习简记/进阶篇/原型到原型链.md
@@ -2,7 +2,7 @@
 title: JavaScript进阶（一）— 原型到原型链
 createTime: 2020/02/09 09:27:29
 author: 李嘉明
-permalink: /defensive-javascript/hx3h2vvj/
+permalink: /learn-js/hx3h2vvj/
 ---
 
 在 `JavaScript` 的世界中，我们常常会通过 构造函数 来创建一个 **实例对象**：
