--- a/src/notes/JAVASCRIPT学习简记/进阶篇/执行上下文栈.md
+++ b/src/notes/JAVASCRIPT学习简记/进阶篇/执行上下文栈.md
@@ -2,7 +2,7 @@
 title: JavaScript进阶（三）— 执行上下文栈
 createTime: 2020/02/11 11:53:33
 author: 李嘉明
-permalink: /defensive-javascript/6snk1b6c/
+permalink: /learn-js/6snk1b6c/
 ---
 
 关于 执行上下文，请点击查看[这篇文章](/article/d12xkizf/)。
