--- a/src/notes/JAVASCRIPT学习简记/进阶篇/消除异步传染性.md
+++ b/src/notes/JAVASCRIPT学习简记/进阶篇/消除异步传染性.md
@@ -2,7 +2,7 @@
 title: 消除异步传染性
 author: 李嘉明
 createTime: 2023/04/07 18:12:20
-permalink: /defensive-javascript/6itrx1jz/
+permalink: /learn-js/6itrx1jz/
 ---
 
 **异步传染性** 是指，当一个函数使用了 `async / await`，其调用者也需要使用 `async / await` 处理异步操作，
