--- a/src/notes/JAVASCRIPT学习简记/进阶篇/词法作用域.md
+++ b/src/notes/JAVASCRIPT学习简记/进阶篇/词法作用域.md
@@ -2,7 +2,7 @@
 title: JavaScript进阶（二）— 词法作用域
 createTime: 2020/02/10 11:37:25
 author: 李嘉明
-permalink: /defensive-javascript/fpcpgpod/
+permalink: /learn-js/fpcpgpod/
 ---
 
 ## 作用域
