--- a/src/notes/JAVASCRIPT学习简记/基础篇/严格模式.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/严格模式.md
@@ -2,7 +2,7 @@
 title: 严格模式
 createTime: 2022/04/15 09:30:58
 author: 李嘉明
-permalink: /defensive-javascript/69vboeiz/
+permalink: /learn-js/69vboeiz/
 ---
 
 ::: tip 提问
