--- a/src/notes/JAVASCRIPT学习简记/基础篇/作用域链.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/作用域链.md
@@ -2,7 +2,7 @@
 title: 作用域和作用域链
 createTime: 2022/04/15 03:58:15
 author: 李嘉明
-permalink: /defensive-javascript/oc3hgg0h/
+permalink: /learn-js/oc3hgg0h/
 ---
 
 ::: tip 提问
