--- a/src/notes/JAVASCRIPT学习简记/基础篇/字符串.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/字符串.md
@@ -2,7 +2,7 @@
 title: 字符串
 createTime: 2022/04/16 05:14:20
 author: 李嘉明
-permalink: /defensive-javascript/wnuvm4t1/
+permalink: /learn-js/wnuvm4t1/
 ---
 
 ::: tip 提问
