--- a/src/notes/JAVASCRIPT学习简记/基础篇/执行上下文和执行栈.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/执行上下文和执行栈.md
@@ -2,7 +2,7 @@
 title: 执行上下文和执行栈
 createTime: 2022/04/22 09:40:24
 author: 李嘉明
-permalink: /defensive-javascript/7xxy6of5/
+permalink: /learn-js/7xxy6of5/
 ---
 
 ::: tip 提问
