--- a/src/notes/JAVASCRIPT学习简记/基础篇/数组和对象.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/数组和对象.md
@@ -2,7 +2,7 @@
 title: 数组和对象
 createTime: 2022/04/16 03:30:44
 author: 李嘉明
-permalink: /defensive-javascript/kr0wd3xk/
+permalink: /learn-js/kr0wd3xk/
 ---
 
 ::: tip 提问
