--- a/src/notes/JAVASCRIPT学习简记/基础篇/集合对象.md
+++ b/src/notes/JAVASCRIPT学习简记/基础篇/集合对象.md
@@ -2,7 +2,7 @@
 title: 集合对象
 createTime: 2022/04/17 10:51:34
 author: 李嘉明
-permalink: /defensive-javascript/oi8seb1b/
+permalink: /learn-js/oi8seb1b/
 ---
 
 集合对象是指： `Set`、 `Map` 、`WeakSet`、 `WeakMap`
