--- a/src/notes/JAVASCRIPT学习简记/进阶篇/执行上下文.md
+++ b/src/notes/JAVASCRIPT学习简记/进阶篇/执行上下文.md
@@ -2,7 +2,7 @@
 title: JavaScript进阶（四）— 执行上下文
 createTime: 2020/02/12 04:35:52
 author: 李嘉明
-permalink: /defensive-javascript/d12xkizf/
+permalink: /learn-js/d12xkizf/
 ---
 
 ## 执行上下文
