feat: $attrs 与 $listeners

--- a/src/1.前端/12.TypeScript/10.环境声明.md
+++ b/src/1.前端/12.TypeScript/10.环境声明.md
@@ -1,3 +1,8 @@
+---
+title: 10.环境声明
+createTime: 2025/05/25 12:13:49
+permalink: /article/e9tsmz2u/
+---
 ## 环境声明
 
 你可以通过 `declare` 关键字来告诉 `TypeScript`，你正在试图表述一个其他地方已经存在的代码。建议放在`.d.ts`文件中.
