--- a/src/1.前端/12.TypeScript/11. 工具类型.md
+++ b/src/1.前端/12.TypeScript/11. 工具类型.md
@@ -1,3 +1,8 @@
+---
+title: 11. 工具类型
+createTime: 2025/05/25 12:13:49
+permalink: /article/woor3rxd/
+---
 ## 工具类型
 
 > `TypeScript`当中也提供了一些非常好用的工具类型，能够配合我们更好的使用工具类型
