--- a/src/1.前端/12.TypeScript/2.对象类型-接口.md
+++ b/src/1.前端/12.TypeScript/2.对象类型-接口.md
@@ -1,3 +1,8 @@
+---
+title: 2.对象类型-接口
+createTime: 2025/05/25 12:13:49
+permalink: /article/2ndb208x/
+---
 ## 对象类型-接口
 
 > 可描述类的一部分抽象行为，也可描述对象的结构形状，
