--- a/src/1.前端/12.TypeScript/3. 数组类型.md
+++ b/src/1.前端/12.TypeScript/3. 数组类型.md
@@ -1,3 +1,8 @@
+---
+title: 3. 数组类型
+createTime: 2025/05/25 12:13:49
+permalink: /article/z6qm49a5/
+---
 ##  数组类型
 
 >  在 TypeScript 中，数组类型有多种定义方式，比较灵活。 
