--- a/src/1.前端/12.TypeScript/9. 泛型.md
+++ b/src/1.前端/12.TypeScript/9. 泛型.md
@@ -1,3 +1,8 @@
+---
+title: 9. 泛型
+createTime: 2025/05/25 12:13:49
+permalink: /article/qwhpasw0/
+---
 ## 泛型
 
 > 泛型是指在定义函数，接口或类的时候，不预先指定具体类型，而在使用的时候指定其类型的一种特性
